:lipstick: Fix blog's link position on mobile

--- a/src/components/layout/styles.styl
+++ b/src/components/layout/styles.styl
@@ -36,6 +36,8 @@ $paddingLeftM = pxToRem(6)
   top: $paddingTop
   +mobile()
     position: static
+    top: $paddingTopM
+    right: $paddingLeftM
 
 .copyright
 .copyrightUnderProject
